--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL = "postgres://ssutonib:24TvZRAbayu6QSSlkAx7ctVjww83Ff7q@arjuna.db.elephantsql.com/ssutonib"
+DB_URL=postgres://ssutonib:24TvZRAbayu6QSSlkAx7ctVjww83Ff7q@arjuna.db.elephantsql.com/ssutonib
 	
